        2.6.9-67.EL (RHEL 4),
        2.6.16.54-0.2.3 (SLES 10),
        2.6.18-53.1.4.el5 (RHEL 5).
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.2-cfs5
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : enhancement
Bugzilla   : 14288
Description: Update to RHEL4 U6 kernel-2.6.9-67.EL.

Severity   : enhancement
Bugzilla   : 14368
Description: Update to RHEL5 latest kernel-2.6.18-53.1.4.el5.

Severity   : normal
Bugzilla   : 14136
Description: make mgs_setparam() handle fsname containing dash
Details    : fsname containing a dash does not work with lctl conf_param

Severity   : enhancement
Bugzilla   : 14388
Description: Update to SLES10 SP1 latest kernel-2.6.16.54-0.2.3.

Severity   : enhancement
Bugzilla   : 14289
Description: Update to RHEL5 Update-1 kernel 2.6.18-53.el5.

Severity   : major
Bugzilla   : 14260
Frequency  : rare, at shutdown
Description: access already free / zero obd_namespace.
Details    : if client_disconnect_export was called without force flag set,
	     and exist connect request in flight, this can produce access to
	     NULL pointer (or already free pointer) when connect_interpret 
	     store ocd flags in obd_namespace.

Severity   : minor
Bugzilla   : 14418
Frequency  : only at startup
Description: not alloc memory with spinlock held.
Details    : allocation memory with GFP_KERNEL can produce sleep deadlock,
	     if any spinlock held.

Severity   : enhancement
Bugzilla   : 12211
Description: make lustre randomly fail allocating memory
Details    : Make lustre randomly failed allocating memory for testing purpose.

Severity   : enhancement
Bugzilla   : 12702
Description: lost problems with lov objid file
Details    : Fixes some scability and access to not inited memory problems 
	     in work with lov objdid file.

Severity   : major